--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "jshydra"]
 	path = jshydra
-	url = https://github.com/adblockplus/jshydra
+	url = git@github.com:adblockcash/abc-jshydra.git
